--- a/css/index.css
+++ b/css/index.css
@@ -9,10 +9,13 @@
 nav{
     position: fixed;
     display: inline-block;
-    margin: 1% 0 0 94%;
+    margin: 1% 0 0 90%;
 }
 
 button{
+    margin-left: 20px;
+    width: 30px;
+    height: 30px;
     border: 1px white;
     border-radius: 50%;
 
@@ -57,6 +60,7 @@ button{
 /* Text */
 
 h1{
+    font-size: 300%; 
     color: yellow;
 }
 
